frontend-kubenetes/backend-external-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-external
  namespace: front
spec:
  type: ExternalName
  externalName: prism-backend.controller.svc.cluster.local
